--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,47 +1,58 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header color="dark">
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>
+    <ion-title color="primary">
       Home
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon name="funnel"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-card class="welcome-card">
-    <ion-img src="/assets/shapes.svg"></ion-img>
-    <ion-card-header>
-      <ion-card-subtitle>Get Started</ion-card-subtitle>
-      <ion-card-title>Welcome to Ionic</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <p>Now that your app has been created, you'll want to start building out features and components. Check out some
-        of the resources below for next steps.</p>
-    </ion-card-content>
-  </ion-card>
-  <app-add-todo >
-  </app-add-todo>
-  <ion-list lines="none">
-    <ion-list-header>
-      <ion-label>Resources</ion-label>
-    </ion-list-header>
-    <ion-item href="https://ionicframework.com/docs/">
-      <ion-icon slot="start" color="medium" name="book"></ion-icon>
-      <ion-label>Ionic Documentation</ion-label>
+<ion-content color="dark">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="medium">
+      <ion-icon color="dark" name="add" (click)="addTodo()"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ng-container *ngIf="todoList$ | async as list else loading">
+
+    <ion-card class="welcome-card" color="dark" *ngFor="let item of list | todoList : 'asd'" (click)="openTodo(item)">
+      <!-- <ion-img src="/assets/shapes.svg"></ion-img> -->
+      <ion-card-header color="light">
+        <ion-card-subtitle>
+          <ion-icon name="clock"></ion-icon>
+          {{item.timestamp | date : "M/d/yy, h:mm a"}}
+        </ion-card-subtitle>
+        <ion-card-title>{{item.title}}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content color="light">
+        <p>{{item.desc}}</p>
+      </ion-card-content>
+    </ion-card>
+
+  </ng-container>
+
+  <!-- 
+  
+
+  <ion-list class="ion-no-padding" color="dark" lines="none" *ngIf="todoList$ | async as list else loading">
+    <ion-item *ngIf="!list.length" color="dark">
+        <ion-icon name="sad"></ion-icon>
+        <ion-label>No todo(s), start to create. </ion-label>
     </ion-item>
-    <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-      <ion-icon slot="start" color="medium" name="build"></ion-icon>
-      <ion-label>Scaffold Out Your App</ion-label>
-    </ion-item>
-    <ion-item href="https://ionicframework.com/docs/layout/structure">
-      <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-      <ion-label>Change Your App Layout</ion-label>
-    </ion-item>
-    <ion-item href="https://ionicframework.com/docs/theming/basics">
-      <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-      <ion-label>Theme Your App</ion-label>
-    </ion-item>
-  </ion-list>
+  </ion-list> -->
+
+  <ng-template #loading>
+    <app-loading>
+    </app-loading>
+  </ng-template>
+
 </ion-content>
