passing url as parameter as subscribing to new subs doesn't update uid

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<div *ngIf="showSpinner" class="loading">
+  <div class="spinner">
+    <div class="double-bounce1"></div>
+    <div class="double-bounce2"></div>
+  </div>
+</div>
 <ion-app>
   <ion-split-pane>
     <ion-menu>
