--- a/src/app/auth/auth/auth.component.html
+++ b/src/app/auth/auth/auth.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
@@ -7,49 +7,64 @@
       <ng-content select=".heading"></ng-content>
     </ion-title>
   </ion-toolbar>
-</ion-header>
-<ion-content>
-  <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
-    <ion-item>
-      <ion-label>
-        <ion-icon name="person"></ion-icon>
-      </ion-label>
-      <ion-input type="text" formControlName="email" placeholder="Email"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label>
-        <ion-icon name="key"></ion-icon>
-      </ion-label>
-      <ion-input type="password" formControlName="password" placeholder="Password"></ion-input>
-    </ion-item>
-    <ng-content select=".btn"></ng-content>
-  </form>
-
-  <ion-item *ngIf="email.errors?.required && email.touched">
-    <ion-label>
-      Email is required.
-    </ion-label>
-    <ion-icon name="information-circle" slot="end"></ion-icon>
-  </ion-item>
-  <ion-item *ngIf="email.errors?.email && email.touched">
-    <ion-label>
-      Invalid email
-    </ion-label>
-    <ion-icon name="information-circle" slot="end"></ion-icon>
-  </ion-item>
-  <ion-item *ngIf="password.errors?.required && password.touched">
-    <ion-label>
-      Password required.
-    </ion-label>
-    <ion-icon name="information-circle" slot="end"></ion-icon>
-  </ion-item>
-  <ion-item *ngIf="password.errors?.minlength && password.touched">
-    <ion-label>
-      Password should be min(6) characters.
-    </ion-label>
-    <ion-badge color="light">
-      {{password.value.length}}
-    </ion-badge>
-    <ion-icon name="information-circle" slot="end"></ion-icon>
-  </ion-item>
+</ion-header> -->
+<ion-content class="auth-form">
+  <div class="div">
+    <div>
+      <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
+        <ion-item no-padding>
+          <ion-label>
+            <ion-icon name="person"></ion-icon>
+          </ion-label>
+          <ion-input type="text" formControlName="email" placeholder="Email"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>
+            <ion-icon name="key"></ion-icon>
+          </ion-label>
+          <ion-input type="password" formControlName="password" placeholder="Password"></ion-input>
+        </ion-item>
+        <ng-content select=".btn"></ng-content>
+      </form>
+    </div>
+    <div>
+      <ion-item *ngIf="email.errors?.required && email.touched">
+        <ion-label>
+          Email is required.
+        </ion-label>
+        <ion-icon name="information-circle" slot="end"></ion-icon>
+      </ion-item>
+      <ion-item *ngIf="email.errors?.email && email.touched">
+        <ion-label>
+          Invalid email
+        </ion-label>
+        <ion-icon name="information-circle" slot="end"></ion-icon>
+      </ion-item>
+      <ion-item *ngIf="password.errors?.required && password.touched">
+        <ion-label>
+          Password required.
+        </ion-label>
+        <ion-icon name="information-circle" slot="end"></ion-icon>
+      </ion-item>
+      <ion-item *ngIf="password.errors?.minlength && password.touched">
+        <ion-label>
+          Password should be min(6) characters.
+        </ion-label>
+        <ion-badge color="light">
+          {{password.value.length}}
+        </ion-badge>
+        <ion-icon name="information-circle" slot="end"></ion-icon>
+      </ion-item>
+    </div>
+    <div>
+      <ng-content select=".action"></ng-content>
+    </div>
+    <!-- <div>
+      <ion-buttons slot="end">
+        <ion-button color="secondary" (click)="googleLogin()">
+          <ion-icon slot="icon-only" name="logo-google"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </div> -->
+  </div>
 </ion-content>
