--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,3 +2,8 @@
   max-height: 35vh;
   overflow: hidden;
 }
+
+.welcome-card {
+  border-left: 6px solid #685add;
+  box-shadow: 0 3px 8px 0px #404040;
+}
