--- a/src/app/setting/setting/setting.component.html
+++ b/src/app/setting/setting/setting.component.html
@@ -14,22 +14,25 @@
 
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <ion-tabs (ionTabsDidChange)="tabChanged($event)">
 
-<ion-tabs (ionTabsDidChange)="tabChanged($event)">
+    <ion-tab-bar slot="bottom">
 
-  <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="profile">
+        <ion-label>Profile</ion-label>
+        <ion-icon [name]="profileIcon"></ion-icon>
+        <ion-badge>6</ion-badge>
+      </ion-tab-button>
 
-    <ion-tab-button tab="profile">
-      <ion-label>Profile</ion-label>
-      <ion-icon [name]="profileIcon"></ion-icon>
-      <ion-badge>6</ion-badge>
-    </ion-tab-button>
+      <ion-tab-button tab="about">
+        <ion-label>About</ion-label>
+        <ion-icon name="information"></ion-icon>
+      </ion-tab-button>
 
-    <ion-tab-button tab="about">
-      <ion-label>About</ion-label>
-      <ion-icon name="information"></ion-icon>
-    </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
+</ion-content>
 
-  </ion-tab-bar>
-</ion-tabs>
+
 <!-- <ion-router-outlet></ion-router-outlet> -->
