--- a/src/app/setting/container/profile/profile.component.html
+++ b/src/app/setting/container/profile/profile.component.html
@@ -1,36 +1,37 @@
 <ion-content padding>
-  <form class [formGroup]="profileForm">
-    <ion-item>
-      <ion-label>Profile Name</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-input formControlName="fullname" placeholder="Type here..." type="text"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label>Age</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-input formControlName="age" placeholder="Type here..." type="number"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label>Gender</ion-label>
-      <ion-select placeholder="Select One" formControlName="gender">
-        <ion-select-option value="f">Female</ion-select-option>
-        <ion-select-option value="m">Male</ion-select-option>
-      </ion-select>
-    </ion-item>
-    <!-- <ion-item>
-          <ion-label>Gender</ion-label>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>
+        Your Profile
+
+      </ion-card-title>
+      <ion-card-subtitle>
+        Edit your profile here.
+      </ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <form class [formGroup]="profileForm">
+        <ion-item>
+          <ion-label position="stacked">Profile Name</ion-label>
+          <ion-input formControlName="fullname" placeholder="Type here..." type="text"></ion-input>
         </ion-item>
-      <ion-item>
-          <ion-input formControlName="gender" placeholder="Type here..." type="text"></ion-input>
-        </ion-item> -->
-    <ion-button type="submit" [style.visibility]="'hidden'">
-    </ion-button>
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-      <ion-fab-button type="submit" color="secondary" (click)="updateUser();" [disabled]="profileForm.invalid">
-        <ion-icon color="light" name="save"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-  </form>
+        <ion-item>
+          <ion-label position="stacked">Age</ion-label>
+          <ion-input formControlName="age" placeholder="Type here..." type="number"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="stacked">Gender</ion-label>
+          <ion-select placeholder="Select One" formControlName="gender">
+            <ion-select-option value="f">Female</ion-select-option>
+            <ion-select-option value="m">Male</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </form>
+    </ion-card-content>
+  </ion-card>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button type="submit" color="secondary" (click)="updateUser();" [disabled]="profileForm.invalid">
+      <ion-icon color="light" name="save"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
