--- a/src/app/shared/add-todo/add-todo.component.html
+++ b/src/app/shared/add-todo/add-todo.component.html
@@ -1,6 +1,6 @@
 <ion-toolbar>
   <ion-buttons slot="start">
-    <ion-button (click)="onClose()">
+    <ion-button (click)="closePopUp()">
       <ion-icon slot="icon-only" name="arrow-dropleft-circle"></ion-icon>
     </ion-button>
   </ion-buttons>
