--- a/src/app/setting/container/about/about.component.html
+++ b/src/app/setting/container/about/about.component.html
@@ -1,3 +1,14 @@
-<p>
-  about works!
-</p>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>
+        About Page
+      </ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p>
+        This application is built using ionic + angular framework.
+      </p>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
