--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,17 +24,26 @@
 
   <ng-container *ngIf="todoList$ | async as list else loading">
 
-    <ion-card class="welcome-card" *ngFor="let item of list | todoList : 'dsc'" (click)="openTodo(item)">
+    <ion-card class="welcome-card" *ngFor="let item of list | todoList : 'dsc'">
       <!-- <ion-img src="/assets/shapes.svg"></ion-img> -->
       <ion-card-header>
-        <ion-card-title>{{item.title}}</ion-card-title>
+
+        <ion-card-title (click)="openTodo(item)">{{item.title}}
+        </ion-card-title>
         <ion-card-subtitle>
           <ion-icon name="clock"></ion-icon>
           {{item.timestamp | date : "M/d/yy, h:mm a"}}
         </ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <p>{{item.desc}}</p>
+        <ion-button fill="clear" (click)="openTodo(item)">
+          <ion-icon slot="icon-only" name="open"></ion-icon>
+        </ion-button>
+        <ion-buttons class="ion-float-right">
+          <ion-button fill="clear" (click)="confirmDelete(item)">
+            <ion-icon name="trash"></ion-icon>
+          </ion-button>
+        </ion-buttons>
       </ion-card-content>
     </ion-card>
 
