--- a/src/app/calendar/component/month/month.component.html
+++ b/src/app/calendar/component/month/month.component.html
@@ -1,3 +1,14 @@
-<p>
-  month works!
-</p>
+<ion-content>
+  <div class="div">
+      <ul *ngIf="month" class="ul">
+          <li *ngFor="let item of month">
+            <ion-ripple-effect></ion-ripple-effect>
+            <ion-label>
+              <ion-icon name="calendar"></ion-icon>
+              {{item.date | date: 'MMMM, d' }}
+            </ion-label>
+          </li>
+        </ul>
+  </div>
+    
+</ion-content>
