--- a/src/app/calendar/component/month/month.component.scss
+++ b/src/app/calendar/component/month/month.component.scss
@@ -1,30 +1,42 @@
 .div {
-  display: flex;
-  justify-content: center;
-
+  
   .ul {
+    background-color: #7ccd69;
     list-style: none;
     display: flex;
     color: white;
     flex-wrap: wrap;
     padding: 0;
     margin: 10px;
-    flex-direction: row;
 
     li {
       color: #333333;
-      width: 100px;
       margin: 1px;
       text-align: center;
-
+      line-height: 54px;
       border-radius: 3px;
       box-sizing: border-box;
       box-shadow: -1px 0px 4px -1px #333333;
-      height: 100px;
+      height: 57px;
+      flex: 19%;
+      max-width: 25%;
+      padding: 0 4px;
+    }
 
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    /* Responsive layout - makes a two column-layout instead of four columns */
+    @media (max-width: 800px) {
+      li {
+        flex: 49%;
+        max-width: 50%;
+      }
+    }
+
+    /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+    @media (max-width: 600px) {
+      li {
+        flex: 25%;
+        max-width: 100%;
+      }
     }
   }
 }
