--- a/src/app/calendar/calendar/calendar.component.html
+++ b/src/app/calendar/calendar/calendar.component.html
@@ -19,10 +19,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-
+  <app-add-todo-container></app-add-todo-container>
   <app-week [week]="week" (selectedDate)="getSelectedDateFromWeek($event)" 
   [defaultSelectedDate]="todayDate"></app-week>
-
-  <app-month [month]="month"></app-month>
-
 </ion-content>
