--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,51 +1,16 @@
-<app-header title="Home" [online]="appState | async" ></app-header>
+<app-header title="Home" [online]="appState | async"></app-header>
 <ion-content>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="secondary">
-      <ion-icon color="light" name="add" (click)="addTodo()"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-
+    <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button color="secondary">
+          <ion-icon color="light" name="add" (click)="addTodo()"></ion-icon>
+        </ion-fab-button>
+      </ion-fab> -->
+  <app-add-todo-container></app-add-todo-container>
   <ng-container *ngIf="todoList$ | async as list else loading">
-
-    <ion-card class="welcome-card" *ngFor="let item of list | todoList : 'dsc'">
-      <!-- <ion-img src="/assets/shapes.svg"></ion-img> -->
-      <ion-card-header>
-
-        <ion-card-title (click)="openTodo(item)">{{item.title}}
-        </ion-card-title>
-        <ion-card-subtitle>
-          <ion-icon name="clock"></ion-icon>
-          {{item.timestamp | date : "M/d/yy, h:mm a"}}
-        </ion-card-subtitle>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-button fill="clear" (click)="openTodo(item)">
-          <ion-icon slot="icon-only" name="open"></ion-icon>
-        </ion-button>
-        <ion-buttons class="ion-float-right">
-          <ion-button fill="clear" (click)="confirmDelete(item)">
-            <ion-icon name="trash"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-card-content>
-    </ion-card>
-
+    <app-todo-list [list]="list"></app-todo-list>
   </ng-container>
-
-  <!-- 
-  
-
-  <ion-list class="ion-no-padding" color="dark" lines="none" *ngIf="todoList$ | async as list else loading">
-    <ion-item *ngIf="!list.length" color="dark">
-        <ion-icon name="sad"></ion-icon>
-        <ion-label>No todo(s), start to create. </ion-label>
-    </ion-item>
-  </ion-list> -->
-
   <ng-template #loading>
     <app-loading>
     </app-loading>
   </ng-template>
-
 </ion-content>
