--- a/src/app/shared/container/add-todo-container/add-todo-container.component.html
+++ b/src/app/shared/container/add-todo-container/add-todo-container.component.html
@@ -1,5 +1,5 @@
-<ion-fab vertical="bottom" horizontal="end" slot="fixed">
-  <ion-fab-button color="secondary">
-    <ion-icon color="light" name="add" (click)="addTodo()"></ion-icon>
+<ion-fab vertical="bottom"  horizontal="end" slot="fixed">
+  <ion-fab-button>
+    <ion-icon name="add" [color]="color" (click)="addTodo()"></ion-icon>
   </ion-fab-button>
 </ion-fab>
