--- a/src/app/calendar/calendar/calendar.component.html
+++ b/src/app/calendar/calendar/calendar.component.html
@@ -18,8 +18,7 @@
 
   </ion-toolbar>
 </ion-header>
+<app-add-todo-container color="dark"></app-add-todo-container>
 <ion-content>
-  <app-add-todo-container></app-add-todo-container>
-  <app-week [week]="week" (selectedDate)="getSelectedDateFromWeek($event)" 
-  [defaultSelectedDate]="todayDate"></app-week>
+  <app-week [week]="week" (selectedDate)="getSelectedDateFromWeek($event)" [defaultSelectedDate]="todayDate"></app-week>
 </ion-content>
