--- a/src/app/shared/container/add-todo-container/add-todo-container.component.scss
+++ b/src/app/shared/container/add-todo-container/add-todo-container.component.scss
@@ -1,3 +1,6 @@
-ion-fab-button{
-    --color:black;
+ion-fab-button {
+    --background: #1D976C;  /* fallback for old browsers */
+    --background: -webkit-linear-gradient(to right, #93F9B9, #1D976C);  /* Chrome 10-25, Safari 5.1-6 */
+    --background: linear-gradient(to right, #93F9B9, #1D976C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
 }
