--- a/src/app/calendar/calendar/calendar.component.html
+++ b/src/app/calendar/calendar/calendar.component.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title color="light">
-      Calendar
+      Home
     </ion-title>
     <ion-buttons slot="end">
       <ion-button>
@@ -19,7 +19,7 @@
   </ion-toolbar>
 </ion-header>
 <app-add-todo-container color="dark"></app-add-todo-container>
-<app-week [week]="week" (selectedDate)="getSelectedDateFromWeek($event)" [defaultSelectedDate]="todayDate"></app-week>
+<app-week [week]="week" (selectedDate)="getTodosForSelectedDate($event)" [defaultSelectedDate]="todayDate"></app-week>
 <ion-content>
   <ng-container *ngIf="todoList$ | async as list else loading">
     <app-todo-list [list]="list" (open)="openTodo($event)" (delete)="confirmDelete($event)"></app-todo-list>
