Week scrollable ui enhancement

--- a/src/app/calendar/component/week/week.component.html
+++ b/src/app/calendar/component/week/week.component.html
@@ -1,7 +1,12 @@
+<ion-toolbar>
+  <ion-title class="title">{{defaultSelectedDate.date | date: 'MMMM, yyyy'}}</ion-title>
+</ion-toolbar>
 <ion-segment scrollable>
   <ion-segment-button layout="icon-top" [checked]="defaultSelectedDate?.displayDate === item?.displayDate"
     [value]="item?.displayDate" (ionSelect)="getSelectedDate(item)" *ngFor="let item of week">
     <ion-icon name="calendar"></ion-icon>
-    <ion-label>{{item.date | date }}</ion-label>
+    <ion-label>
+      {{item.date | date: 'dd' }}
+    </ion-label>
   </ion-segment-button>
 </ion-segment>
