Updating test cases

--- a/src/app/setting/setting/setting.component.html
+++ b/src/app/setting/setting/setting.component.html
@@ -1,5 +1,5 @@
 <ion-header color="dark">
-  <ion-toolbar color="dark">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
@@ -27,6 +27,3 @@
     </ion-tab-bar>
   </ion-tabs>
 </ion-content>
-
-
-<!-- <ion-router-outlet></ion-router-outlet> -->
