--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
         <ion-toolbar>
           <ion-title>Menu</ion-title>
         </ion-toolbar>
+        <app-color-selection></app-color-selection>
       </ion-header>
       <ion-content>
         <ion-list>
